@@ -5,7 +5,8 @@ import com.company.dto.AuthorDTO;
 import com.company.dto.BookDTO;
 import com.company.entity.Author;
 import com.company.entity.Book;
-import jakarta.persistence.Cacheable;
+import com.company.mapper.AuthorMapper;
+import com.company.mapper.BookMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -15,18 +16,22 @@ import java.util.stream.Collectors;
 @Service
 public class AuthorService {
     private final AuthorRepository authorRepository;
+    private final AuthorMapper authorMapper;
+    private final BookMapper bookMapper;
 
-    public AuthorService(AuthorRepository authorRepository) {
+    public AuthorService(AuthorRepository authorRepository, AuthorMapper authorMapper, BookMapper bookMapper) {
         this.authorRepository = authorRepository;
+        this.authorMapper = authorMapper;
+        this.bookMapper = bookMapper;
     }
 
     public List<AuthorDTO> getAllAuthor() {
         List<Author> authors = authorRepository.findAll();
         return authors.stream().map(author -> {
-            AuthorDTO authorDTO = convertToDTO(author);
+            AuthorDTO authorDTO = authorMapper.authorConvertToAuthorDTO(author);
             List<BookDTO> authoredBooks = author.getAuthoredBooks()
                     .stream()
-                    .map(this::convertToBookDTO)
+                    .map(bookMapper::bookConvertToBookDTO)
                     .collect(Collectors.toList());
             authorDTO.setAuthoredBooks(authoredBooks);
             return authorDTO;
@@ -37,20 +42,21 @@ public class AuthorService {
         Optional<Author> optionalAuthor = authorRepository.findById(id);
         if (optionalAuthor.isPresent()) {
             Author foundedAuthor = optionalAuthor.get();
-            AuthorDTO authorDTO = convertToDTO(foundedAuthor);
+            AuthorDTO authorDTO = authorMapper.authorConvertToAuthorDTO(foundedAuthor);
             List<Book> authoredBooks = foundedAuthor.getAuthoredBooks();
-            List<BookDTO> bookDTOList = authoredBooks.stream().map(this::convertToBookDTO).toList();
+            List<BookDTO> bookDTOList = authoredBooks.stream()
+                    .map(bookMapper::bookConvertToBookDTO)
+                    .collect(Collectors.toList());
             authorDTO.setAuthoredBooks(bookDTOList);
             return authorDTO;
         }
         return new AuthorDTO();
     }
 
-
     public AuthorDTO creatAuthor(AuthorDTO newAuthorDTO) {
-        Author author = convertToEntity(newAuthorDTO);
+        Author author = authorMapper.authorConvertToAuthor(newAuthorDTO);
         Author saveAuthor = authorRepository.save(author);
-        return convertToDTO(saveAuthor);
+        return authorMapper.authorConvertToAuthorDTO(saveAuthor);
     }
 
     public boolean deleteAuthor(Long id) {
@@ -76,54 +82,13 @@ public class AuthorService {
                 foundedAuthor.setPassword(newAuthorDTO.getPassword());
             if (newAuthorDTO.getAuthoredBooks() != null && !newAuthorDTO.getAuthoredBooks().isEmpty()) {
                 List<BookDTO> bookDTOList = newAuthorDTO.getAuthoredBooks();
-                List<Book> list = bookDTOList.stream().map(this::convertToBookEntity).toList();
+                List<Book> list = bookDTOList.stream().map(bookMapper::BookDTOConvertToBook).toList();
                 foundedAuthor.setAuthoredBooks(list);
             }
             foundedAuthor.setId(id);
             Author author = authorRepository.save(foundedAuthor);
-            return convertToDTO(author);
+            return authorMapper.authorConvertToAuthorDTO(author);
         }
         return new AuthorDTO();
     }
-
-
-    private AuthorDTO convertToDTO(Author author) {
-        AuthorDTO authorDTO = new AuthorDTO();
-        authorDTO.setId(author.getId());
-        authorDTO.setName(author.getName());
-        authorDTO.setEmail(author.getEmail());
-        authorDTO.setAge(author.getAge());
-        authorDTO.setPassword(author.getPassword());
-        return authorDTO;
-    }
-
-    private Author convertToEntity(AuthorDTO authorDTO) {
-        Author author = new Author();
-        author.setId(authorDTO.getId());
-        author.setName(authorDTO.getName());
-        author.setEmail(authorDTO.getEmail());
-        author.setAge(authorDTO.getAge());
-        author.setPassword(authorDTO.getPassword());
-        return author;
-    }
-
-    private BookDTO convertToBookDTO(Book book) {
-        BookDTO bookDTO = new BookDTO();
-        bookDTO.setId(book.getId());
-        bookDTO.setName(book.getName());
-        bookDTO.setAuthorId(book.getAuthor().getId());
-        return bookDTO;
-    }
-
-    private Book convertToBookEntity(BookDTO bookDTO) {
-        Book book = new Book();
-        book.setId(bookDTO.getId());
-        book.setName(bookDTO.getName());
-        Author author = new Author();
-        author.setId(bookDTO.getAuthorId());
-        book.setAuthor(author);
-        return book;
-    }
-
-
 }
